Fix navbar movement issue on collapse

--- a/src/containers/Navbar/Navbar.css
+++ b/src/containers/Navbar/Navbar.css
@@ -8,7 +8,6 @@
   background-color: #80BE79 !important;
   padding: 1rem;
   font-size: 1.5rem;
-  height: 10rem;
   font-size: 300%;
   font-family: 'Montserrat', sans-serif;
 }
@@ -81,6 +80,10 @@
   color: white;
   font-weight: 700;
   text-decoration: none;
+}
+
+ul.navbar-nav {
+  width: 50vw;
 }
 
 @media only screen and (max-width: 991px) {
